# otus-pdp-2024-homework-06

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: base.yml
src/homework_06/: __main__.py
src/homework_06/domain/: models.py  repositories.py  services.py
src/homework_06/infrastructure/: orm.py  repositories.py  unit_of_work.py
tests/test_domain/: fake_storages.py  test_services.py
tests/test_infrastructure/: conftest.py  test_orm.py  test_repositories.py  test_unit_of_work.py
